opsiclientd (4.0.84) UNRELEASED; urgency=medium

  * exclude_product_group_ids and include_product_group_ids added.

 -- Erol Ueluekmen <e.ueluekmen@uib.de>  Sat, 07 Feb 2015 01:39:33 +0100

opsiclientd (4.0.82) stable; urgency=low

  * ControlServer: Bugfix in Flooding prevention
  * SoftwareOnDemand: 
      Escaping special characters in HTML-Output
      Bugfix in sort algorithm
  * CacheService: fixing instlogfile sync to server

 -- Erol Ueluekmen <e.ueluekmen@uib.de>  Tue, 11 Sep 2014 22:05:04 +0100

opsiclientd (4.0.81) stable; urgency=low

  * installation_pending will not set, if a product has always actionRequest.
  * Only reset action request in cacheservice, if md5sum missmatch is detected. (error on server)
  * Don't fire on_shutdown if installation_pending is detected.

 -- Erol Ueluekmen <e.ueluekmen@uib.de>  Tue, 8 Oct 2014 11:11:04 +0100

opsiclientd (4.0.78) stable; urgency=low

  * Added sync_time_from_service function.
  * ControlServer: Added Flooding prevention
  * SoftwareOnDemand: Sorting Products by ProductName
  * WAN/VPN: Workarround timing problem while network reconnect

 -- Erol Ueluekmen <e.ueluekmen@uib.de>  Tue, 29 Jul 2014 01:19:04 +0100

opsiclientd (4.0.77) stable; urgency=low

  * WAN/VPN: Win 8.1 mshotfix support
  * WAN/VPN: Bugfix for connection loose by productCaching, when using webdav
  * Changed LogfileDir from C:\\tmp\\opsiclientd.log to C:\\opsi.org\\log\\opsiclientd.log

 -- Erol Ueluekmen <e.ueluekmen@uib.de>  Tue, 14 Jan 2014 01:08:04 +0100